--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "websocket",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +17,8 @@
     "y-websocket": "^3.0.0"
   },
   "dependencies": {
-    "@y/websocket-server": "^0.1.1"
+    "@y/websocket-server": "^0.1.1",
+    "express": "^5.1.0",
+    "ws": "^8.14.2"
   }
 }
