Enhance server setup: load environment variables and improve startup logging

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@y/websocket-server": "^0.1.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "ws": "^8.14.2"
   }
